openshift-different-ns-non-mesh/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: demo-be
  labels:
    app: demo-app
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: demo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: demo-be
  labels:
    app: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      serviceAccountName: demo-app
      containers:
        - name: demo-app
          image: muarwi/demo-microservice-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
