openshift-different-ns-non-mesh/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-db
  namespace: demo-db
  labels:
    app: demo-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: demo-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-db
  namespace: demo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      service: demo-db
      app: demo-db
  template:
    metadata:
      labels:
        service: demo-db
        app: demo-db
    spec:
      serviceAccountName: demo-db
      containers:
        - name: demo-db
          image: muarwi/demo-microservice-db:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql"
              name: "pgdata"
      volumes:
        - name: pgdata
          emptyDir: {}
