openshift-different-ns-non-mesh/route-nginx.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-route
  namespace: demo-fe
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
